Plug high pass filter into audio pipeline

--- a/examples/usb_microphone/CMakeLists.txt
+++ b/examples/usb_microphone/CMakeLists.txt
@@ -5,6 +5,7 @@ add_executable(usb_microphone
     main.c
     usb_descriptors.c
     usb_microphone.c
+    filter.c
 )
 
 target_include_directories(usb_microphone PRIVATE ${CMAKE_CURRENT_LIST_DIR})
